# boxfunge

./: Cargo.toml  LICENSE  README.md  hello_world.befunge
programs/: calculator.bf  dna2.bf  kquine6.bf  numberguess.bf  rng.bf  self_interpreter.bf
src/: jit.rs  lib.rs  main.rs  test.rs
