[package]
name = "boxfunge"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
glam = "0.25.0"
metrohash = "1.0.6"
rand = { version = "0.8.5", default-features = false, features = [
	"std",
	"small_rng",
] }
smallvec = "1.13.1"
thiserror = "1.0.57"
twox-hash = "1.6.3"

[profile.release]
debug = true
